--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
     <h3>Hobbies</h3>
     <ol type="I">
-      <li><a href="https://www.icc-cricket.com/"> Cricket</a></li>
+      <li>Coding>
+      <li>Cricket</li>
       <li>Badminton</li>
       <li>Coffee</li>
     </ol>
@@ -74,11 +75,11 @@
       </thead>
       <tbody>
         <tr>
-          <td>2010-2013</td>
-          <td>Lead developer at Tempo app</td>
+          <td>2020</td>
+          <td>Developer at an app</td>
         </tr>
         <tr>
-          <td>2010</td>
+          <td>2021</td>
           <td>Resercher</td>
         </tr>
       </tbody>
