--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Angela's Personal site</title>
+    <title>Ananda's Personal site</title>
 
     <style>
 
@@ -58,7 +58,7 @@
 
     <h3>Hobbies</h3>
     <ol type="I">
-      <li>Coding>
+      <li>Coding<li>
       <li>Cricket</li>
       <li>Badminton</li>
       <li>Coffee</li>
