--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <h3>Hobbies</h3>
     <ol type="I">
-      <li>Coding<li>
+      <li>Coding</li>
       <li>Cricket</li>
       <li>Badminton</li>
       <li>Coffee</li>
