--- a/index.html
+++ b/index.html
@@ -35,13 +35,7 @@
             <em>Student of <strong>CET Bhubhaneswar.</strong></em>
           </p>
           <p>I love to do coding and also play badminton.</p>
-          <p>
-            <a
-              href="https://in.linkedin.com/in/ananda-charan-hembram-a2b6ba158"
-            >
-              linkedin</a
-            >
-          </p>
+         
         </td>
       </tr>
     </table>
@@ -76,11 +70,11 @@
       <tbody>
         <tr>
           <td>2020</td>
-          <td>Developer at an app</td>
+          <td>None</td>
         </tr>
         <tr>
           <td>2021</td>
-          <td>Resercher</td>
+          <td>Built a small personal website</td>
         </tr>
       </tbody>
     </table>
@@ -93,11 +87,11 @@
           <table cellspacing="3px">
             <tr>
               <td>Web Development</td>
-              <td>★★★★★</td>
+              <td>★</td>
             </tr>
             <tr>
               <td>Android Development</td>
-              <td>★★★★★</td>
+              <td>★</td>
             </tr>
           </table>
         </td>
@@ -105,17 +99,17 @@
           <table cellspacing="3px">
             <tr>
               <td>Photography</td>
-              <td>★★★★</td>
+              <td>★★★</td>
             </tr>
             <tr>
               <td>Python</td>
-              <td>★★★</td>
+              <td>★</td>
             </tr>
           </table>
         </td>
       </tr>
     </table>
 
-    <h4><a href="contact.html">Contact</a></h4>
+    <h4><a href="https://in.linkedin.com/in/ananda-charan-hembram-a2b6ba158">Linkedin</a></h4>
   </body>
 </html>
